--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
           <img src="https://i.imgur.com/hDDzy5u.jpg" alt="Giselle" class="w-48 h-48 object-cover rounded-full border-4 border-red-300">
           <div>
             <h2 class="text-2xl font-semibold mb-2 text-red-700">Giselle</h2>
-            <p class="text-gray-700">本名：內永枝惠（うちの えり），2000年出生，是aespa的主饒舌，精通多語言，展現出獨特的魅力。</p>
+            <p class="text-gray-700">本名：內永枝利（김애리）</p>
+            <p class="mt-2">出生日期:2000年10月30日</p>
+            <p class="mt-3">個人代言:</p>
+            <p class="mt-4">Loewe品牌大使</p>
           </div>
         </div>
       </div>
